# arkpz-pzpi-22-6-kryvko-roman

./: README.md
Pract1/: arkpz-pzpi-22-6-kryvko-roman-pract1.txt  arkpz-pzpi-22-6-Кривко-Роман-pract1.txt
Pract1/arkpz-pzpi-22-6-kryvko-roman-pract1/: Cargo.toml
Pract1/arkpz-pzpi-22-6-kryvko-roman-pract1/src/: main.rs
Pract2/: arkpz-pzpi-22-6-kryvko-roman-pract2.txt
Pract2/arkpz-pzpi-22-6-kryvko-roman-pract2/: code-examples.txt
Task1/: arkpz-pzpi-22-6-kryvko-roman-task1.txt  arkpz-pzpi-22-6-Кривко-Роман-task1.txt
Task2/: arkpz-pzpi-22-6-kryvko-roman-task2.txt
Task2/arkpz-pzpi-22-6-kryvko-roman-task2/Atark/: .gitignore  pom.xml
Task2/arkpz-pzpi-22-6-kryvko-roman-task2/Atark/src/main/resources/: application.properties
Task2/arkpz-pzpi-22-6-kryvko-roman-task2/diagrams/: dsd.pu  er-diagram.pu  use-case-actions.pu  use-case-admin.pu  use-case-registration.pu  use-case-view.pu
Task3/: arkpz-pzpi-22-6-kryvko-roman-task3.txt
Task3/arkpz-pzpi-22-6-kryvko-roman-task3/Atark/: pom.xml
Task3/arkpz-pzpi-22-6-kryvko-roman-task3/diagrams/: activity.pu  activity1.pu  interaction.pu
Task4/: arkpz-pzpi-22-6-kryvko-roman-task4.txt
Task4/arkpz-pzpi-22-6-kryvko-roman-task4/: CMakeLists.txt  config.json
Task4/arkpz-pzpi-22-6-kryvko-roman-task4/include/: config.h  sensorClient.h  temperatureUnit.h
Task4/arkpz-pzpi-22-6-kryvko-roman-task4/src/: main.cpp  sensorClient.cpp
Task4/diagrams/: activity.pu  use-case.pu
Task5/: arkpz-pzpi-22-6-kryvko-roman-task5.txt
Task5/arkpz-pzpi-22-6-kryvko-roman-task5/Atark/: .gitignore  docker-compose.yaml  pom.xml
(+126 files in other folders)
